--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
 
     <!-- Safari Webpage Icon    by-BY -->
-    <link rel="yao" href="{{ site.baseurl }}/img/yao.png">
+    <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/yao.png">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -35,15 +35,6 @@
     <!-- Hux change font-awesome CDN to qiniu -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-                        tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
-                                });
-      </script>
-      <script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
 
     <!-- Hux Delete, sad but pending in China
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
